--- a/index.html
+++ b/index.html
@@ -9,78 +9,15 @@
 </head>
 
 <body>
-    <form action="">
-        <label for="fname">first name</label>
-        <br>
-        <input placeholder="first name" maxlength="5" type="text" value="Kunal" name="fname">
-        <br>
-        <br>
-        <label for="lname">Last name</label>
-        <br>
-        <input disabled placeholder="last name " type="text" value="Dabhane" name="lname" id="">
-        <br>
-        <br> <label for="password">Password</label>
-        <br>
-        <input type="password" name="password" id="">
-        <br>
-        <br>
-        <label for="gender">Gender</label>
-        <br> male
-        <input type="radio" name="gender" id=""> female
-        <input type="radio" name="gender" id=""> others
-        <input type="radio" name="gender" id="">
 
-        <!-- <br> -->
-        <!-- <br> -->
-        <!-- <input type="text" value="this is also vale"> -->
-        <!-- <textarea name="" id="" cols="30" rows="10">this is adresss area</textarea> -->
-        <br>
-        <br>
-        <label for="passing year">completed years</label>
-        <br> year 1
-        <input type="checkbox" name="passing year" id="" checked> year 2
-        <input type="checkbox" name="passing year" id=""> year 3
-        <input type="checkbox" name="passing year" id="">
-        <br>
-        <br>
-        <label for="DOB">date of birth</label>
-        <input type="date" name="" id="">
-
-
-        <br>
-        <br>
-        <label for="DOB">type your date</label>
-        <input type="datetime" name="" id="">
-
-
-        <br>
-        <br>
-        <label for="DOB">date of birth along with time</label>
-        <input type="datetime-local" name="DOB" id="">
-
-        <br>
-        <br>
-        <label for="">how much are you angry right now</label>
-        <br> 1
-
-        <input type="range" name="" id="">10
-        <br>
-        <br>
-        <select name="dropdown" id="">
-            <option value=""> jan</option>
-            <option value=""> feb</option>
-            <option value=""> march</option>
-        </select>
-        <select name="dropdown" multiple id="">
-            <option value=""> jan</option>
-            <option value=""> feb</option>
-            <option value=""> march</option>
-        </select>
-        <br>
-        <br>
-        <input type="submit" value="this is ok ">
-    </form>
-
+    <center>
+        <h1>welcome to assignment</h1>
+    </center>
+    <center>
+        <a href="./Form/Form.html">
+            <p>form assignment</p>
+        </a>
+    </center>
 </body>
 
 </html>
