--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <center>
-        <h1>welcome to assignment</h1>
+        <h1>welcome to notes of webtech classes</h1>
     </center>
     <center>
         <a href="./Form/Form.html">
