--- a/LoginPage/Screen.html
+++ b/LoginPage/Screen.html
@@ -12,24 +12,32 @@
 
 <body>
     <div class="background">
-        <h1>Facebook</h1>
+        <h1>FaceBook</h1>
         <div class="page">
             <form action="">
                 <br>
                 <label for="">Email</label>
-                <input type="email" name="" id="" placeholder="input you email">
+                <input type="email" name="" id="" placeholder="   example@gmail.com">
                 <br>
                 <br>
                 <label for="">Password</label>
-                <input placeholder="your password" type="password" name="" id="">
+                <input placeholder="   Pass@123" type="password" name="" id="">
 
                 <br>
                 <br>
                 <input type="checkbox" name="" id="">
-                <label style="font-size: small; font-family: serif;" for="">keep me logged in</label>
+                <label style="font-size: small; font-family:sans-serif;" for="">Keep me Logged In</label>
                 <br>
                 <br>
-                <input type="button" id="Login" value="Login">
+                <input type="button" id="Login" value="Login" src="">
+                <br>
+
+                <center style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin-bottom: 4px;">
+                    <p><u>Forgot Password</u>
+                        <br>
+                        <u>Sign Up</u></p>
+                </center>
+
             </form>
 
         </div>
